--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,12 @@ body {
   * {
     @apply border-border;
   }
+
   body {
-    @apply bg-background text-foreground;
+    @apply h-full bg-background text-foreground;
+  }
+
+  html {
+    @apply h-full;
   }
 }
